fixing formatting and content, arrggghh

--- a/blogging-website.html
+++ b/blogging-website.html
@@ -14,32 +14,28 @@
 
       <p>What is a pirate favorite periodic element? The answer is Arrrrgon</p>
 
-      <p>Types of <span class="footnote">BLAH:</span></p>
+      <p>Types of <span class="footnote">things pirate blarg aboot:</span></p>
 
       <ul>
-        <li>too much blah</li>
-        <li>too long blah</li>
-        <li>not pertaining to your interests blah</li>
-        <li>somewhat interesting, but you're falling asleep blah</li>
+        <li>lorem ipsum</li>
+        <li>lorem ipsum2</li>
+        <li>arrrrrrrgh lorem ipsum</li>
+        <li>my awesome parrot Schrotty who likes to parachute off me shoulders</li>
       </uL>
 
-      <h2>Other boring stuff</h2>
+      <h2>It's a pirate's life for me</h2>
 
-      <p>errrrrrrrrrrrrrmageeeerrrrrdddd plz make it staphhhhh BLAH BLAH BLAH <span class="flashy">BORING!!!!</span>.</p>
+      <p>yo ho yo ho its a pirate's life for me <span class="flashy">ARRRRRRrrrrrghhhhhh!!!!</span>.</p>
     </div>
 
-    <p>Now, to truly lose your interest.</p>
+    <p>Never look back, never go back. Never say never, arrrgggghhhh.</p>
 
     <div class="flashy">
 
-<p>None of this matters, <span class="flashy">life is futile, everyone dies</span>. For example:
-  <span class="flashy">YOU</span> will die, <span class="flashy">WE</span> will all die, <span class="flashy">all the animals</span> will die. The sun will burn out,<span class="flashy">even this solar system will one day be dead and all will be still</span>.</p>
+<p>lorem ipsum <span class="flashy">lorem ipsum</span>
 
-      <p>Little-known fact: everything you find important and meaningful will all go away one day. Everyone you love will die, and all things are temporary, even all of the efforts put into this website</p>
 
-      <h2>Lectures are inherently boring because anytime not doing what you actually want with free time is OPPRESSION of the mind</h2>
-
-      <p>You are welcome, please don't self harm, let us all live long and be miserable..TOGETHER.</p>
+      <p>With all this and more, you can become a pirate too!!!!</p>
     </div>
   </body>
 </html>
