fixing divs and alignments

--- a/blogging-website.html
+++ b/blogging-website.html
@@ -10,32 +10,33 @@
       <p>Here are some highlights from me blergs:</p>
 
       <div class="flashy">
-      <h2>Emo Jams, bad jokes, hook hands, and wild women</h2>
+        <h2>Emo Jams, bad jokes, hook hands, and wild women</h2>
 
-      <p>What is a pirate favorite periodic element? The answer is Arrrrgon</p>
+          <p>What is a pirate favorite periodic element? The answer is Arrrrgon</p>
 
-      <p>Types of <span class="footnote">things pirate blarg aboot:</span></p>
 
-      <ul>
-        <li>lorem ipsum</li>
-        <li>lorem ipsum2</li>
-        <li>arrrrrrrgh lorem ipsum</li>
-        <li>my awesome parrot Schrotty who likes to parachute off me shoulders</li>
-      </uL>
 
-      <h2>It's a pirate's life for me</h2>
+          <p>Types of <span class="footnote">things pirate blarg aboot:</span></p>
 
-      <p>yo ho yo ho its a pirate's life for me <span class="flashy">ARRRRRRrrrrrghhhhhh!!!!</span>.</p>
-    </div>
+            <ul>
+              <li>lorem ipsum</li>
+              <li>lorem ipsum2</li>
+              <li>arrrrrrrgh lorem ipsum</li>
+              <li>my awesome parrot Schrotty who likes to parachute off me shoulders</li>
+            </uL>
 
-      <p>Never look back, never go back. Never say never, arrrgggghhhh.</p>
+        <h2>It's a pirate's life for me</h2>
+      </div>
 
+      <div class="about">
+        <h3>About me:</h3>
+        <p>yo ho yo ho its a pirate's life for me <span class="flashy">ARRRRRRrrrrrghhhhhh!!!!</span>.</p>
+        <p>Never look back, never go back. Never say never, arrrgggghhhh.</p>
+      </div>
       <div class="flashy">
+        <p>lorem ipsum <span class="flashy">lorem ipsum</span>
+        <p>With all this and more, you can become a pirate too!!!!</p>
+      </div>
 
-      <p>lorem ipsum <span class="flashy">lorem ipsum</span>
-
-
-      <p>With all this and more, you can become a pirate too!!!!</p>
-    </div>
   </body>
 </html>
